--- a/screen3.css
+++ b/screen3.css
@@ -37,8 +37,8 @@
   text-align: left; color: var(--cream);
 }
 .para .serif { font-family: var(--serif); font-style: italic; font-weight: 400; }
-.para--1 { top: calc(50% + 151px); width: 400px; }
-.para--2 { top: calc(50% + 237px); width: 440px; }
+.para--1 { top: calc(50% + 127px); width: 400px; }
+.para--2 { top: calc(50% + 213px); width: 440px; }
 
 /* кнопка «Подробнее» */
 .more {
